[tool.poetry]
name = "py-twelvelabs"
version = "0.1.0"
description = ""
authors = ["Minura Punchihewa <minurapunchihewa17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.5.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
